--- a/src/index.css
+++ b/src/index.css
@@ -53,11 +53,11 @@
     overflow: hidden;
   }
 
-  .scrollbar-hide, .hide-scrollbar {
+  .scrollbar-hide {
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
-  .scrollbar-hide::-webkit-scrollbar, .hide-scrollbar::-webkit-scrollbar {
+  .scrollbar-hide::-webkit-scrollbar {
     display: none;
   }
 
