--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-/* #root styles removed to prevent layout conflicts */
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
 
 .logo {
   height: 6em;
